syntax = "proto3";

package hello;

option go_package = "hello/hello";

// 定义请求消息
message HelloRequest {
    string name = 1;
}

// 定义响应消息中的数据部分
message DataMessage {
    string info = 1;
}

// 定义响应消息
message HelloResponse {
    RetData resp_data = 1;
    string hello_name = 2;
}

// 定义 RetData
message RetData {
    int32 code = 1;
    string msg = 2;
}

// 定义服务接口
service HelloService {
    rpc Hello(HelloRequest) returns (HelloResponse) {}
}

// 项目根目录执行以下命令编译pb文件
/*
protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative rpc_method/hello/hello.proto
*/